ast/src/snapshots/ast__parser__tests__call_snapshots@empty.snap
---
source: ast/src/parser.rs
expression: "parse_expr(\"let _ = a.call();\")"
---
[
    FunctionDefinition(
        FunctionDefinition {
            visibility: Private(
                Private {
                    location: Location(
                        0..2,
                    ),
                },
            ),
            external: false,
            name: Identifier {
                name: "main",
                location: Location(
                    3..7,
                ),
            },
            parameters: [],
            type_parameters: [],
            return_type: Scalar(
                ScalarType {
                    name: "void",
                    location: Location(
                        13..17,
                    ),
                },
            ),
            block: Block {
                statements: [
                    VariableDeclaration(
                        VariableDeclaration {
                            name: Identifier {
                                name: "_",
                                location: Location(
                                    24..25,
                                ),
                            },
                            variable_type: None,
                            value: Call(
                                Call {
                                    callee: None,
                                    name: Identifier {
                                        name: "call",
                                        location: Location(
                                            30..34,
                                        ),
                                    },
                                    arguments: [],
                                    type_parameters: [],
                                    location: Location(
                                        30..34,
                                    ),
                                },
                            ),
                            location: Location(
                                20..37,
                            ),
                        },
                    ),
                ],
                location: Location(
                    18..39,
                ),
            },
            location: Location(
                0..39,
            ),
        },
    ),
]
