ast/src/snapshots/ast__parser__tests__call_snapshots@function_generic.snap
---
source: ast/src/parser.rs
expression: "parse_expr(\"let _ = call<T>(a, b);\")"
---
[
    FunctionDefinition(
        FunctionDefinition {
            visibility: Private(
                Private {
                    location: Location(
                        0..2,
                    ),
                },
            ),
            external: false,
            name: Identifier {
                name: "main",
                location: Location(
                    3..7,
                ),
            },
            parameters: [],
            type_parameters: [],
            return_type: Scalar(
                ScalarType {
                    name: "void",
                    location: Location(
                        13..17,
                    ),
                },
            ),
            block: Block {
                statements: [
                    VariableDeclaration(
                        VariableDeclaration {
                            name: Identifier {
                                name: "_",
                                location: Location(
                                    24..25,
                                ),
                            },
                            variable_type: None,
                            value: Call(
                                Call {
                                    callee: None,
                                    name: Identifier {
                                        name: "call",
                                        location: Location(
                                            28..32,
                                        ),
                                    },
                                    arguments: [
                                        Variable(
                                            Variable {
                                                name: Identifier {
                                                    name: "a",
                                                    location: Location(
                                                        36..37,
                                                    ),
                                                },
                                            },
                                        ),
                                        Variable(
                                            Variable {
                                                name: Identifier {
                                                    name: "b",
                                                    location: Location(
                                                        39..40,
                                                    ),
                                                },
                                            },
                                        ),
                                    ],
                                    type_parameters: [
                                        TypeParameter {
                                            name: Identifier {
                                                name: "T",
                                                location: Location(
                                                    33..34,
                                                ),
                                            },
                                        },
                                    ],
                                    location: Location(
                                        28..40,
                                    ),
                                },
                            ),
                            location: Location(
                                20..42,
                            ),
                        },
                    ),
                ],
                location: Location(
                    18..44,
                ),
            },
            location: Location(
                0..44,
            ),
        },
    ),
]
