ast/src/snapshots/ast__parser__tests__call_snapshots@function_param_2.snap
---
source: ast/src/parser.rs
expression: "parse_expr(\"let _ = call(a, b);\")"
---
[
    FunctionDefinition(
        FunctionDefinition {
            visibility: Private(
                Private {
                    location: Location(
                        0..2,
                    ),
                },
            ),
            external: false,
            name: Identifier {
                name: "main",
                location: Location(
                    3..7,
                ),
            },
            parameters: [],
            type_parameters: [],
            return_type: Scalar(
                ScalarType {
                    name: "void",
                    location: Location(
                        13..17,
                    ),
                },
            ),
            block: Block {
                statements: [
                    VariableDeclaration(
                        VariableDeclaration {
                            name: Identifier {
                                name: "_",
                                location: Location(
                                    24..25,
                                ),
                            },
                            variable_type: None,
                            value: Call(
                                Call {
                                    callee: None,
                                    name: Identifier {
                                        name: "call",
                                        location: Location(
                                            28..32,
                                        ),
                                    },
                                    arguments: [
                                        Variable(
                                            Variable {
                                                name: Identifier {
                                                    name: "a",
                                                    location: Location(
                                                        33..34,
                                                    ),
                                                },
                                            },
                                        ),
                                        Variable(
                                            Variable {
                                                name: Identifier {
                                                    name: "b",
                                                    location: Location(
                                                        36..37,
                                                    ),
                                                },
                                            },
                                        ),
                                    ],
                                    type_parameters: [],
                                    location: Location(
                                        28..37,
                                    ),
                                },
                            ),
                            location: Location(
                                20..39,
                            ),
                        },
                    ),
                ],
                location: Location(
                    18..41,
                ),
            },
            location: Location(
                0..41,
            ),
        },
    ),
]
